--- a/resume.html
+++ b/resume.html
@@ -3,13 +3,21 @@
   <head>
    <meta charset="UTF-8"  />
    <title>Teresa's Resume</title>
+   <link href="css/style.css" rel="stylesheet"/>
   </head>
 
   <body>
+    <div id="container">
   <header>
   <h1>Teresa Abrego</h1>
-<p>2503 Evergreen Bay Ct. Houston, TX 77059 832-724-9473 tna7@miami.edu</p>
+  <address>
+    <p>2503 Evergreen Bay Ct.</p>
+    <p>Houston, TX 77059</p>
+    <p>832-724-9473</p>
+    <p>tna7@miami.edu</p>
+  </address>
   </header>
+
       <nav>
         <ul>
         <li><a href="#education">Education</a></li>
@@ -32,7 +40,7 @@
       <section>
       <h2 id="experience">Experience</h2>
       <h3>HBO Latin America</h3>
-      13801 NW 14th St. Sunrise, FL
+      <p>13801 NW 14th St. Sunrise, FL</p>
       <h3>Programming Intern</h3>
       <p>June 2015-August 2015</p>
       <ul>
@@ -96,7 +104,7 @@ Premiers every other Tuesday for half an hour.</li>
   </section>
 
   <section>
-    <h2 id="activities">Activities</h2>
+    <h3 id="activities">Activities</h3>
     <ul>
       <li>Chi Omega Fraternity</li>
       <li>Scuba Club</li>
@@ -106,5 +114,6 @@ Premiers every other Tuesday for half an hour.</li>
   </section>
 
 </main>
+</div>
 </body>
 </html>
