--- a/index.html
+++ b/index.html
@@ -5,27 +5,33 @@
    <meta name="viewpoint" content="width=device-width: initial-scale=1;"  />
    <title>Nikki Abrego</title>
    <link href="css/style.css" rel="stylesheet" media="screen"/>
+   <link href=     />
    <link href=      />
-   <link href=      />
-
   </head>
 
+
   <body>
-    <div id="container">
-  <header>
-    <h1>Nikki Abrego</h1>
-  </header>
-    </div> 
-  <img src="image/image2.jpg" alt="camera girl"
-    style="width:400x;height:300px;">
+    <header>
+        <h1>NIKKI ABREGO</h1>
+        <img id="movingit" src="image/new image.png" alt="camera girl"
+        style="width:500x;height:400px;">
+
+    <nav id="navbarstyle">
+      <ul>
+        <li><a href="contact.html">CONTACT ME</a></li>
+        <li><a href="mywork.html">MY WORK</a></li>
+        <li><a href="resume.html">RESUME</a></li>
+        <li><a href="index.html">HOME</a></li>
+      </ul>
+    </nav>
+
+    </header>
+</body>
 
 
 
 
 
-
-
-  </body>
 
 
 
