--- a/resume.html
+++ b/resume.html
@@ -2,29 +2,21 @@
 <html>
   <head>
    <meta charset="UTF-8"  />
-   <title>Teresa's Resume</title>
+   <title>Nikki's Resume</title>
    <link href="css/style.css" rel="stylesheet"/>
   </head>
 
   <body>
     <div id="container">
   <header>
-  <h1>Teresa Abrego</h1>
-  <address>
-    <p>2503 Evergreen Bay Ct.</p>
-    <p>Houston, TX 77059</p>
-    <p>832-724-9473</p>
-    <p>tna7@miami.edu</p>
-  </address>
-  </header>
-
-      <nav>
-        <ul>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#activities">Activities</a></li>
-       </ul>
+  <h1>RESUME</h1>
+    <nav>
+      <ul>
+        <li><a href="contact.html">CONTACT ME</a></li>
+        <li><a href="mywork.html">MY WORK</a></li>
+        <li><a href="resume.html">RESUME</a></li>
+        <li><a href="index.html">HOME</a></li>
+      </ul>
     </nav>
   <main>
     <section>
