--- a/contact.html
+++ b/contact.html
@@ -22,16 +22,15 @@
   <body>
 
   <div id="movingimages">
-      <a href="https://www.facebook.com/nikki.abrego.5">
-        <img src="image/facebook.png" alt="facebook" style="width:200px;">
+    <a href="https://www.facebook.com/nikki.abrego.5">
+        <img src="image/facebook.png" alt="facebook" style="width:200px;"/>
     </a>
     <a href="mailto:tna7@miami.edu">
-      <img src="image/emailicon.png" alt="email" style="width:200px;">
+      <img src="image/emailicon.png" alt="email" style="width:200px;"/>
     </a>
     <a href="https://twitter.com/NikkiAbrego">
-      <img src="image/twitter.png" alt="twitter" style="width:200px;">
+      <img src="image/twitter.png" alt="twitter" style="width:200px;"/>
     </a>
 
-    
   </div>
   </body>
