--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,8 @@
   <head>
    <meta charset="UTF-8"  />
    <title>Nikki's Resume</title>
-   <link href="css/style.css" rel="stylesheet"/>
+   <link href="css/style.css" rel="stylesheet" media="screen" />
+   <link href="css/print.css" rel="stylesheet" media="print" />
   </head>
 
   <body>
