changes keep coming

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         style="width:500x;height:400px;">
 
     <nav id="navbarstyle">
-      <ul>
+      <ul id="index">
         <li><a href="contact.html">CONTACT ME</a></li>
         <li><a href="mywork.html">MY WORK</a></li>
         <li><a href="resume.html">RESUME</a></li>
