--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
   <header>
     <h1>CONTACT ME</h1>
-  <nav>
+  <nav id="index">
     <ul id="ulstylebar">
       <li><a href="contact.html">CONTACT ME</a></li>
       <li><a href="mywork.html">MY WORK</a></li>
