--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
   <body>
   <div>
   <h1>RESUME</h1>
-    <nav>
+    <nav id="index">
       <ul>
         <li><a href="contact.html">CONTACT ME</a></li>
         <li><a href="mywork.html">MY WORK</a></li>
@@ -66,7 +66,7 @@ Premiers every other Tuesday for half an hour.</li>
     </section>
 
     <section>
-    <h2 id="skills">Skills</h2>
+    <h2>Skills</h2>
     <h3>Control room ops</h3>
     <ul>
       <li>Chyron Lyric Graphics</li>
