and keep comming

--- a/contact.html
+++ b/contact.html
@@ -11,26 +11,28 @@
     <h1>CONTACT ME</h1>
   <nav id="index">
     <ul id="ulstylebar">
-      <li><a href="contact.html">CONTACT ME</a></li>
-      <li><a href="mywork.html">MY WORK</a></li>
-      <li><a href="resume.html">RESUME</a></li>
-      <li><a href="index.html">HOME</a></li>
+      <li><b><a href="contact.html">CONTACT ME</a></b></li>
+      <li><b><a href="mywork.html">MY WORK</a></b></li>
+      <li><b><a href="resume.html">RESUME</a></b></li>
+      <li><b><a href="index.html">HOME</a></b></li>
     </ul>
   </nav>
   </header>
 
   <body>
-
+  <main id=main1>
   <div id="movingimages">
     <a href="https://www.facebook.com/nikki.abrego.5">
-        <img src="image/facebook.png" alt="facebook" style="width:200px;"/>
+        <img src="image/facebook.png" alt="facebook" style="width:100px;"/>
     </a>
     <a href="mailto:tna7@miami.edu">
-      <img src="image/emailicon.png" alt="email" style="width:200px;"/>
+      <img src="image/emailicon.png" alt="email" style="width:100px;"/>
     </a>
     <a href="https://twitter.com/NikkiAbrego">
-      <img src="image/twitter.png" alt="twitter" style="width:200px;"/>
+      <img src="image/twitter.png" alt="twitter" style="width:100px;"/>
     </a>
 
+
+  </main>
   </div>
   </body>
