--- a/index.html
+++ b/index.html
@@ -5,23 +5,21 @@
    <meta name="viewpoint" content="width=device-width: initial-scale=1;"  />
    <title>Nikki Abrego</title>
    <link href="css/style.css" rel="stylesheet" media="screen"/>
-   <link href=     />
-   <link href=      />
   </head>
 
 
   <body>
     <header>
-        <h1>NIKKI ABREGO</h1>
+      <h1>NIKKI ABREGO</h1>
         <img id="movingit" src="image/new image.png" alt="camera girl"
         style="width:500x;height:400px;">
 
     <nav id="navbarstyle">
       <ul id="index">
-        <li><a href="contact.html">CONTACT ME</a></li>
-        <li><a href="mywork.html">MY WORK</a></li>
-        <li><a href="resume.html">RESUME</a></li>
-        <li><a href="index.html">HOME</a></li>
+        <li><b><a href="contact.html">CONTACT ME</a></b></li>
+        <li><b><a href="mywork.html">MY WORK</a></b></li>
+        <li><b><a href="resume.html">RESUME</a></b></li>
+        <li><b><a href="index.html">HOME</a></b></li>
       </ul>
     </nav>
 
