--- a/resume.html
+++ b/resume.html
@@ -12,10 +12,10 @@
   <h1>RESUME</h1>
     <nav id="index">
       <ul>
-        <li><a href="contact.html">CONTACT ME</a></li>
-        <li><a href="mywork.html">MY WORK</a></li>
-        <li><a href="resume.html">RESUME</a></li>
-        <li><a href="index.html">HOME</a></li>
+        <li><b><a href="contact.html">CONTACT ME</a></b></li>
+        <li><b><a href="mywork.html">MY WORK</a></b></li>
+        <li><b><a href="resume.html">RESUME</a></b></li>
+        <li><b><a href="index.html">HOME</a></b></li>
       </ul>
     </nav>
   <main>
@@ -31,77 +31,61 @@
 
       <section>
       <h2 id="experience">Experience</h2>
-      <h3>HBO Latin America</h3>
+      <p id="movingit2">HBO Latin America</p>
       <p>13801 NW 14th St. Sunrise, FL</p>
-      <h3>Programming Intern</h3>
+      <h3 id="movingit3">Programming Intern</h3>
       <p>June 2015-August 2015</p>
-      <ul>
-      <li>Monitoring and troubleshooting all feeds to
+    <ul style="list-style-type:circle">
+      <li id="fixingit">Monitoring and troubleshooting all feeds to
 the status of on air programming, automation
 transmission lists and technical quality control.</li>
-      <li>Prepared to handle on-air emergencies</li>
-      <li>Prepared and completed operator checklists,
+      <li id="fixingit2">Prepared and completed operator checklists,
 log changes, time adjustments, and log activity</li>
-     </ul>
-     <h3><a href= "http://umtv.miami.edu">University of Miami Television.</a></h3>
-     University of Miami, Coral Gables, FL
-     <p>August 2014-present</p>
-     <ul>
-     <li>Award-winning half-hour program featuring national and UM sports. Airs LIVE every Friday
+    </ul style="list-style-type:circle">
+     <h3 id="movinglink"><a href= "http://umtv.miami.edu">University of Miami Television.</a></h3>
+     <p id="formatting">University of Miami, Coral Gables, FL</p>
+     <p id="formatting">August 2014-present</p>
+     <ul style="list-style-type:circle">
+     <li id= "fixingit">Award-winning half-hour program featuring national and UM sports. Airs LIVE every Friday
 and highlights the best of the weeks sports
 and in-depth analysis of upcoming games.</li>
-    <li>Assigning shooting positions to cameras</li>
-    <li>Controls vision switcher</li>
-    <li>Provides direction to floor manager</li>
-    <li>Monitors the technical aspects of all video
-sources</li>
     </ul>
-    <h3>Audio for Unimiami</h3>
-    <ul>
-      <li>Spanish show that reaches out to Latinos
+    <h3 id="totheleft">Audio for Unimiami</h3>
+    <ul style="list-style-type:circle">
+      <li id="formatting2">Spanish show that reaches out to Latinos
 with topics and news that is occurring daily.
 Premiers every other Tuesday for half an hour.</li>
-      <li>Controls the audio during the show.</li>
+      <li id="formatting3">Controls the audio during the show.</li>
     </ul>
     </section>
 
     <section>
-    <h2>Skills</h2>
-    <h3>Control room ops</h3>
-    <ul>
-      <li>Chyron Lyric Graphics</li>
-      <li>Grass Valley K2 server</li>
-      <li>Autoscript TelePrompTer</li>
-      <li>Wheatstone Audio Board</li>
-      <li>Grass Valley Kayak Switcher</li>
-      <li>Louth Automation</li>
+    <h2 id="skills">Skills</h2>
+    <h3 id="controls">Control room ops</h3>
+    <ul style="list-style-type:circle">
+      <li id="moving">Chyron Lyric Graphics</li>
+      <li id="moving1">Grass Valley K2 server</li>
+      <li id="moving2">Autoscript TelePrompTer</li>
+      <li id="moving3">Wheatstone Audio Board</li>
+      <li id="moving4">Grass Valley Kayak Switcher</li>
+      <li id="moving5">Louth Automation</li>
     </ul>
-    <h3>Camera</h3>
-    <ul>
-      <li>Panasonic AG-HMC</li>
-      <li>Grass Valley</li>
+    <h3 id="upup">Camera</h3>
+    <ul style="list-style-type:circle">
+      <li id="camera">Panasonic AG-HMC</li>
+      <li id="camera2">Canon 5d Mark iii</li>
     </ul>
-    <h3>Editing</h3>
-    <ul>
-      <li>Avid</li>
-      <li>Final Cut Pro</li>
-      <li>IMovie</li>
+    <h3 id="edit">Editing</h3>
+    <ul style="list-style-type:circle">
+      <li id="edit1">Avid</li>
+      <li id="edit2">Final Cut Pro</li>
+      <li id="edit3">IMovie</li>
     </ul>
-    <h3>Adobe</h3>
-    <ul>
-      <li>Photoshop</li>
-      <li>InDesign</li>
-      <li>Illustrator</li>
-    </ul>
-  </section>
-
-  <section>
-    <h3 id="activities">Activities</h3>
-    <ul>
-      <li>Chi Omega Fraternity</li>
-      <li>Scuba Club</li>
-      <li>Ibis Yearbook</li>
-      <li>Hispanic Heritage Society</li>
+    <h3 id="adobe">Adobe</h3>
+    <ul style="list-style-type:circle">
+      <li id="shop">Photoshop</li>
+      <li id="in">InDesign</li>
+      <li id="ill">Illustrator</li>
     </ul>
   </section>
 
