--- a/mywork.html
+++ b/mywork.html
@@ -1,1 +1,34 @@
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewpoint" content="width=device-width: initial-scale=1;"  />
+    <title>Nikki Abrego</title>
+    <link href="css/style.css" rel="stylesheet" media="screen"/>
+  </head>
 
+
+  <header>
+    <h1>MY WORK</h1>
+  <nav id="index">
+    <ul id="ulstylebar">
+      <li><a href="contact.html">CONTACT ME</a></li>
+      <li><a href="mywork.html">MY WORK</a></li>
+      <li><a href="resume.html">RESUME</a></li>
+      <li><a href="index.html">HOME</a></li>
+    </ul>
+  </nav>
+  </header>
+
+  <body>
+    <h2>Videos</h2> 
+
+
+
+
+
+
+
+
+</body>
+</html>
