--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,8 @@
 
   <body>
   <main id=main1>
+    <h2>Phone Number</h2>
+    <p id="page">832-555-5555</p>
   <div id="movingimages">
     <a href="https://www.facebook.com/nikki.abrego.5">
         <img src="image/facebook.png" alt="facebook" style="width:100px;"/>
