--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta name="viewpoint" content="width=device-width: initial-scale=1;"  />
    <title>Nikki Abrego</title>
    <link href="css/style.css" rel="stylesheet" media="screen"/>
+   <link href="css/mobile.css" rel="stylesheet" media="screen" />
   </head>
 
 
