--- a/mywork.html
+++ b/mywork.html
@@ -22,15 +22,17 @@
 
   <body>
     <h2>Videos</h2>
-  <iframe width="420" height="315"
-  src="https://www.youtube.com/embed/uLRJoVRUfyU" frameborder="0">
+  <iframe id="video1" width="420" height="315"
+  src="https://www.youtube.com/embed/iHuWExyvCmI" frameborder="0">
   </iframe>
 
-  <iframe width="420" height="315"
+  <iframe id="video2" width="420" height="315"
   src="https://www.youtube.com/embed/YC1fy_jwwYk" frameborder="0">
-  </iframe> 
+  </iframe>
 
-
+  <iframe id="video3" width="420" height="315"
+  src="https://www.youtube.com/embed/OZmS0BT_Nuw" frameborder="0">
+  </iframe>
 
 
 
